--- a/_scss/_apidoc.scss
+++ b/_scss/_apidoc.scss
@@ -9,6 +9,7 @@
   }
 
   &__info {
+    white-space: normal;
     margin-top: 2rem;
 
     &__summary {
@@ -50,6 +51,7 @@
       display: inline-block;
       border: 1px solid $black;
       padding: 0.2em;
+      margin-left: 0.2rem;
     }
   }
 
