--- a/_includes/article.html
+++ b/_includes/article.html
@@ -4,9 +4,9 @@
       <header class="article__header">
         <h1 class="article__title" itemprop="name headline">{{ page.title | escape }}</h1>
         <p class="article__meta">
-          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+          <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="datePublished">
             {% assign date_format = site.minima.date_format | default: '%-d %b %Y' %}
-            Last updated: {{ page.date | date: date_format }}
+            Last updated: {{ page.last_modified_at | date: date_format }}
           </time>
           {% if page.author %}
           by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author
