Added documentation for Claim -activity-log-item operation

--- a/_includes/blocks/block-apidoc-endpoints.html
+++ b/_includes/blocks/block-apidoc-endpoints.html
@@ -14,3 +14,7 @@
     {% assign method = 'put' %}
     {% assign url = '/{id}' %}
 {% endif %}
+{% if endpoint contains 'operation' %}
+    {% assign method = endpoint.method %}
+    {% assign url = endpoint.url %}
+{% endif %}
