--- a/_includes/blocks/block-apidoc-attributes.html
+++ b/_includes/blocks/block-apidoc-attributes.html
@@ -1,30 +1,36 @@
 {% for attribute in block.attributes %}
-<div class="apidoc__object">
-    <div class="apidoc__object__name">
-        {{ attribute.name }}
-    </div>
-    <div class="apidoc__object__type">
-        {{ attribute.type }} {% if attribute.required %}<span class="apidoc__object__required">required</span>{% endif
-        %}
-    </div>
-    {% include blocks/block-apidoc-attributes-context.html context=include.context %}
-    {% if attribute.attributes %}
-    <div class="apidoc__object__children">
-        <div class="apidoc__object__children__toggle">Click to view child attributes</div>
-        <div class="apidoc__object__children__panel">
-            {% for attribute in attribute.attributes %}
-            <div class="apidoc__object">
-                <div class="apidoc__object__name">
-                    {{ attribute.name }}
-                </div>
-                <div class="apidoc__object__type">
-                    {{ attribute.type }} {% if attribute.required %}<span class="apidoc__object__required">required</span>{% endif %}
-                </div>
-                {% include blocks/block-apidoc-attributes-context.html context=include.context %}
+    {% if attribute.exclude_in contains include.context %}
+    {% else %}
+        <div class="apidoc__object">
+            <div class="apidoc__object__name">
+                {{ attribute.name }}
             </div>
-            {% endfor %}
+            <div class="apidoc__object__type">
+                {{ attribute.type }} {% if attribute.required_in contains include.context %}<span class="apidoc__object__required">required</span>{% endif
+                %}
+            </div>
+            {% include blocks/block-apidoc-attributes-context.html context=include.context %}
+            {% if attribute.attributes %}
+            <div class="apidoc__object__children">
+                <div class="apidoc__object__children__toggle">Click to view child attributes</div>
+                <div class="apidoc__object__children__panel">
+                    {% for attribute in attribute.attributes %}
+                        {% if attribute.exclude_in contains include.context %}
+                        {% else %}
+                            <div class="apidoc__object">
+                                <div class="apidoc__object__name">
+                                    {{ attribute.name }}
+                                </div>
+                                <div class="apidoc__object__type">
+                                    {{ attribute.type }} {% if attribute.required_in contains include.context %}<span class="apidoc__object__required">required</span>{% endif %}
+                                </div>
+                                {% include blocks/block-apidoc-attributes-context.html context=include.context %}
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            {% endif %}
         </div>
-    </div>
     {% endif %}
-</div>
 {% endfor %}
