--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -190,7 +190,7 @@
         <div class="apidoc__gridcol">
             {% if block.search_parameters %}
                 <h3>Query Parameters</h3>
-                <div>
+                <div class="apidoc__object">
                     <b>{{ block.search_requirements_description }}</b>
                 </div>
                 {% for parameter in block.search_parameters %}
@@ -234,8 +234,8 @@
             <h3> Response Payload Attributes</h3>
             {% capture search_block %}
                 {% include search-attributes.md %}
+                {% include blocks/block-apidoc-attributes.html context='search' block=page%}
             {% endcapture %}
-            {% include blocks/block-apidoc-attributes.html context='search' block=search_block %}
         </div>
     </div>
     <div class="apidoc__gridrow">
