--- a/_includes/blocks/block-apidoc.html
+++ b/_includes/blocks/block-apidoc.html
@@ -232,7 +232,7 @@
     <div class="apidoc__gridrow">
         <div class="apidoc__gridcol">
             <h3>Response Payload Attributes</h3>
-                {% include /blocks/block-apidoc-attributes-datasource.html datasource=site.data.globals.search_attributes %}
+                {% include /blocks/block-apidoc-attributes-datasource.html datasource=site.data.api-attributes.search_attributes %}
         </div>
     </div>
     <div class="apidoc__gridrow">
