--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -16,7 +16,7 @@ layout: default
 
 
         {% for item in posts %}
-        <article class="pagelayout__index__item filtertag__item filterdate__item" data-date={{ item.date | date: '%Y-%m' | slugify }} data-tag="{% for tag in item.tags %}{{tag | slugify }}{% unless forloop.last %}, {% endunless %}{% endfor %}">
+        <article class="pagelayout__index__item filtertag__item filterdate__item" data-date="{{ item.date | date: '%Y-%m' | slugify }}" data-tag="{% for tag in item.tags %}{{tag | slugify }}{% unless forloop.last %}, {% endunless %}{% endfor %}">
           <div class="pagelayout__index__title" itemprop="name headline">{{ item.title | escape }}</div>
 
           <p class="pagelayout__index__meta">
