--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -84,3 +84,11 @@
   font-size: 0.8em;
   border-radius: 12px;     
 }
+
+
+.tag-plugins {
+  background-color: #f5945e; 
+  color: #0D2C4C; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em;     
+}
