--- a/_layouts/sdk.html
+++ b/_layouts/sdk.html
@@ -13,6 +13,7 @@ layout: default
       {% include article.html %}
     </div>
     <div class="sidepanels">
+      <a href="https://github.com/canvas-medical/canvas-plugins/issues/new"><img style="height: 20px; width: auto; padding-right: 5px;" src="{{ "/assets/images/font-awesome/fa-github.svg" }}">Questions? Create an issue.</a>
       <div class="sidepanels__sidepanel">
         {% include panel-guides.html %}
       </div>
