--- a/_includes/blocks/block-apidoc-attribute-object.html
+++ b/_includes/blocks/block-apidoc-attribute-object.html
@@ -16,7 +16,7 @@
                     {% for option in attribute.enum_options %}
                         {% if option.exclude_in contains include.context %}
                         {% else %}
-                            <li>{{ option.value }}</li>
+                            <li>{{ option.value }} {% if option.description %}({{ option.description }}){% endif %}</li>
                         {% endif %}
                     {% endfor %}
                 </ul>
