--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -51,6 +51,8 @@ layout: default
                 <span class="tag-sdk">{{ tag }}</span>
               {% elsif tag == "config" %}
               <span class="tag-config">{{ tag }}</span>
+              {% elsif tag == "portal" %}
+              <span class="tag-portal">{{ tag }}</span>
               {% elsif tag == "plugins" %}
               <span class="tag-plugins">{{ tag }}</span>
               {% else %}
