--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -87,8 +87,15 @@
 
 
 .tag-plugins {
-  background-color: #f5945e; 
+  background-color: #ebaf58; 
   color: #0D2C4C; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em;     
+}
+
+.tag-portal {
+  background-color: #c1d021; 
+  color: #3a4e13; 
   padding: 3px 9px; /* Adjust padding to create space around the text */
   font-size: 0.8em;     
 }
