Make the SDK documentation more approachable to new users with shorter, simpler explanations and an architecture diagram.

--- a/_layouts/sdk.html
+++ b/_layouts/sdk.html
@@ -17,9 +17,11 @@ layout: default
       <div class="sidepanels__sidepanel">
         {% include panel-guides.html %}
       </div>
+      {% unless page.disable_anchorlist %}
       <div class="sidepanels__sidepanel">
         {% include panel-anchorlist.html %}
       </div>
+      {% endunless %}
     </div>
   </div>
 </div>
