--- a/_layouts/releasenotes-index.html
+++ b/_layouts/releasenotes-index.html
@@ -53,6 +53,8 @@ layout: default
               <span class="tag-config">{{ tag }}</span>
               {% elsif tag == "portal" %}
               <span class="tag-portal">{{ tag }}</span>
+              {% elsif tag == "breaking-change" %}
+              <span class="tag-breaking-change">{{ tag }}</span>
               {% elsif tag == "plugins" %}
               <span class="tag-plugins">{{ tag }}</span>
               {% else %}
