--- a/_scss/_tags.scss
+++ b/_scss/_tags.scss
@@ -99,3 +99,11 @@
   padding: 3px 9px; /* Adjust padding to create space around the text */
   font-size: 0.8em;     
 }
+
+
+.tag-breaking-change {
+  background-color: #e20822; 
+  color: #FFFFFF; 
+  padding: 3px 9px; /* Adjust padding to create space around the text */
+  font-size: 0.8em;     
+}
