Add a menu to the handlers page that shows abbreviated examples of each

--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -18,6 +18,7 @@
 @import 'navigation';
 @import 'pagelayout';
 @import 'rogue';
+@import 'sdk_styles';
 @import 'sidenav';
 @import 'sidepanels';
 @import 'toc';
