--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,3 +10,7 @@
     integrity="sha256-qzlNbRtZWHoUV5I2mI2t9QR7oYXlS9oNctX+0pECXI0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.56.9/dist/instantsearch.production.min.js"
     integrity="sha256-8AA0iLtMtPZvYXCp1M0yOWKK/PkffhvDt+1yl7bNtCw=" crossorigin="anonymous"></script>
+
+<script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+</script>
