--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -15,6 +15,7 @@
 @import 'filtertag';
 @import 'footer';
 @import 'jekylltabs';
+@import 'landingpage';
 @import 'navigation';
 @import 'pagelayout';
 @import 'rogue';
