--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -1,24 +1,30 @@
 .navigation {
     &__container {
         width: 100%;
-        height: var(--header-height);
+        height: 96px;
+        background-color: $white;
+        border-bottom: 1px solid #e4e4e7;
         &__inner {
             padding-left: $container-padding;
             padding-right: $container-padding;
             display: flex;
             flex-direction: row;
             align-items: center;
+            justify-content: space-around;
         }
         &__global {
-            padding: 12px;
+            padding-left: 12px;
             @media (min-width: $breakpoint-md) {
-                padding-bottom: 30px;
+                height: 100%;
             }
-            background-color: $panel-color;
+            background-color: white;
             overflow: hidden;
             white-space: nowrap;
+            .navigation__menu__item {
+              color: black;
+            }
             .navigation__menu__item:hover {
-                color: $navyblue;
+              text-decoration: none;
             }
             @media (max-width: $breakpoint-md) {
                 display: flex;
@@ -27,8 +33,6 @@
             }
         }
         &__site {
-            background-color: $panel-color;
-            border-bottom: 1px solid $babyblue;
             @media (max-width: $breakpoint-sm) {
                 flex-direction: column;
                 padding-bottom: 14px;
@@ -70,9 +74,13 @@
             flex-direction: row;
         }
         &__item {
-            font-size: 0.875rem;
+            font-weight: bold;
             padding: 0.375rem;
             border-bottom: 2px solid transparent;
+            color: black;
+            &:hover {
+              text-decoration: none;
+            }
             &__active {
                 color: $navyblue;
                 text-decoration: none;
