--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,3 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <a href="https://canvasmedical.com" target="_blank">&copy; 2025 Canvas Medical</a>
+</footer>
