--- a/_scss/_landingpage.scss
+++ b/_scss/_landingpage.scss
@@ -11,7 +11,8 @@
     justify-content: space-evenly;
     background-image: linear-gradient(to bottom, #252525, #000000);
     padding: 25px;
-    margin-top: 30px;
+    margin: 30px auto auto auto;
+    max-width: 1000px;
     height: 400px;
     border-radius: 20px;
   
