--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -51,10 +51,10 @@ $container-padding: 14px;
 :root {
     @media (max-width: calc( $breakpoint-lg - 1px ) ) {
             --footer-height: 76px;
-            --body-height: calc(var(--viewport-height) - (97 + var(--footer-height) + 2px));
+            --body-height: calc(var(--viewport-height) - (97px + var(--footer-height) + 2px));
     }
     @media (min-width: $breakpoint-lg) {
             --footer-height: 76px;
-            --body-height: calc(var(--viewport-height) - (97 + var(--footer-height) + 2px));
+            --body-height: calc(var(--viewport-height) - (97px + var(--footer-height) + 2px));
     }
 }
