--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <a href="https://canvasmedical.com" target="_blank">&copy; 2025 Canvas Medical</a>
+  <a href="https://www.canvasmedical.com/" target="_blank">&copy; <span id="current-year"></span> Canvas Medical</a>
 </footer>
