--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
   height: var(--footer-height);
-  text-align: center;
-  padding-top: 38px;
+  text-align: right;
+  border-top: 1px solid #e4e4e7;
+  padding-top: 5px;
+  padding-right: 10px;
 }
