Commit changes by Mashell

--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -32,10 +32,12 @@
             overflow: hidden;
             white-space: nowrap;
             .navigation__menu__item {
-              color: black;
+              color: #111827;
+              font-weight: 500;
             }
             .navigation__menu__item:hover {
               text-decoration: none;
+              color:#2C928B;
             }
             @media (max-width: $breakpoint-md) {
                 display: flex;
