--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,7 +1,15 @@
 .footer {
-  height: var(--footer-height);
+  height: 1rem;
   text-align: right;
   border-top: 1px solid #e4e4e7;
-  padding-top: 5px;
-  padding-right: 10px;
+  padding: 6px 24px 6px 0;
+  a {
+    font-size: 0.8rem;
+    color: #6B7280;  // Grey color
+    text-decoration: none;
+    
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
