--- a/_scss/_landingpage.scss
+++ b/_scss/_landingpage.scss
@@ -1,7 +1,16 @@
+
+
 .pagelayout__landingpage__container__inner {
   margin: auto;
   padding-left: calc(min(200px, 20%));
   padding-right: calc(min(200px, 20%));
+
+  @media (max-width: 1400px) {
+    padding-left: calc(min(50px, 5%));
+    padding-right: calc(min(50px, 5%));
+  }
+  }
+  
 
   .hero {
     display: flex;
@@ -29,6 +38,7 @@
         h1 {
           font-size: 2.5rem;
           font-weight: bold;
+          font-family: "Open Sans-ExtraBold", Helvetica;
         }
 
         h1, h2 {
@@ -155,13 +165,12 @@
       }
     }
   }
-}
 
 @media only screen and (max-width: 768px) {
   .pagelayout__landingpage__container__inner {
     margin: auto;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
     .hero {
       border-radius: 0;
@@ -215,4 +224,217 @@
       }
     }
   }
+}
+
+
+//////  New Applied Styles /////
+
+// Hero Styles //
+
+.heroContainer {
+  background: linear-gradient(116deg, #080403 36.37%, #344F52 103.82%);
+  border-radius: 48px;
+  padding: 6rem 6rem;
+  max-width: 1200px;
+  margin: 2rem auto;
+  display: flex;
+  align-items: center;
+  gap: 6rem;
+  
+  @media (max-width: 1100px) {
+      flex-direction: column;
+      padding: 4rem 8rem;
+      gap: 3rem;
+      margin: 1.5rem auto;
+      border-radius: 24px; 
+      text-align: center;
+  }
+  @media (max-width: 768px) {
+    padding: 4rem 4rem;
+    margin: 1.5rem auto;
+}
+  
+  &Left {
+      flex: 1;
+      max-width: 560px;
+
+      @media (max-width: 1100px) {
+          max-width: 100%;
+      }
+
+      h1 {
+          font-size: 2rem;
+          font-weight: 800;
+          color: white;
+          line-height: 1.4;
+      }
+
+      h2 {
+          font-size: 1.125rem;
+          color: #94a3b8;
+          margin-bottom: 2rem;
+          margin-top: 0;
+          line-height: 1.6;
+          font-weight: 400;
+      }
+  }
+
+  &Right {
+      flex: 1;
+      max-width: 550px;
+
+      @media (max-width: 1100px) {
+          max-width: 100%;
+          width: 100%;
+      }
+  }
+}
+
+.terminalImage {
+  width: 100%;
+  height: auto;
+  display: block;
+  box-shadow: 0px 0px 30px 0px rgba(32, 50, 52, 0.50);
+
+  @media (max-width: 1100px) {
+      max-width: 400px;
+      margin: 0 auto;
+  }
+}
+
+.heroButton {
+  display: inline-block;
+  background: linear-gradient(180deg, #0D8E83 0%, #0C6F67 100%);
+  color: white;
+  padding: .9rem 1.8rem;
+  border-radius: 62.4375rem;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.2s ease;
+
+  &:hover {
+      text-decoration: none;
+      transform: translateY(-4px); 
+  }
+
+  @media (max-width: 1100px) {
+      padding: .8rem 1.6rem; 
+  }
+}
+
+
+// Section Styles
+
+.landingPageSection {
+  padding: 1rem 1rem;
+  max-width: 1400px;
+  margin: 0 auto;
+
+  &Header {
+      font-size: 1.5rem;
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: .5rem;
+      color: #111827;
+  }
+
+  &Description {
+      text-align: center;
+      color: #6B7280;
+      line-height: 150%;
+      font-size: 1rem;
+      max-width: 600px;
+      margin: 0 auto 1rem;
+  }
+}
+
+
+// Stats Styles
+
+.statsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6rem;
+  margin: 2rem auto 0rem auto;
+  max-width: 800px;
+
+  @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 3rem;
+  }
+}
+
+.statsItem {
+  text-align: center;
+
+  .statsNumber {
+      font-size: 4rem;
+      font-weight: 700;
+      color: #2C928B; 
+      margin-bottom: 1rem;
+  }
+
+  .statsDescription {
+      font-size: .8rem;
+      color: #2C928B;
+      font-weight: 700;
+      letter-spacing: 0.02em;
+  }
+}
+
+// Footer Box Styles
+
+.footerBox {
+  padding: 2rem;
+  font-size: 0.9rem;
+  line-height: 150%; /* 24px */
+  color: #555;
+  font-weight: 500;
+  text-align: center;
+}
+
+.footerBox hr {
+  border: none;
+  border-top: 1px solid #F2F3F5;
+  margin-bottom: 3rem;
+}
+
+.footer-content ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 1rem;
+}
+
+.footer-content ul li {
+  display: flex;
+  align-items: center; 
+  margin-bottom: 0.5rem;
+  gap: 0.3rem;
+}
+
+.footer-content ul li span svg {
+  display: block; 
+  margin-right: 0.5rem;
+  width: 1rem; 
+  height: 1rem; 
+  color: #555; 
+}
+
+.footer-content a {
+  color: #2C928B;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+
+.footer-content a:hover {
+  color: #555;
+}
+
+.footer-content p {
+  margin-top: 1rem;
+  color: #aaa;
 }
