--- a/_includes/panel-guides.html
+++ b/_includes/panel-guides.html
@@ -1,15 +1,25 @@
-{% for item in site.guides -%}
-{%- for guide_url in item.guide_for -%}
-{%- if guide_url == page.url -%}
-{% capture guide_links %}
-{% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}<strong>{{ item.title }}</strong>{% endif %}<br />
-{% endcapture %}
-{%- endif -%}
-{%- endfor -%}
-{%- endfor %}
-{% if guide_links.size > 0 %}
-<div class="panel panel__container">
+{% assign guide_links = "" %}
+{% for item in site.guides %}
+  {% for guide_url in item.guide_for %}
+    {% if guide_url == page.url %}
+      {% capture link %}
+    <p>
+        {% if item.url %}
+          <a href="{{ item.url }}">{{ item.title }}</a>
+        {% else %}
+          <strong>{{ item.title }}</strong>
+        {% endif %}
+        <br />
+      {% endcapture %}
+    </p>
+      {% assign guide_links = guide_links | append: link %}
+    {% endif %}
+  {% endfor %}
+{% endfor %}
+
+{% if guide_links != "" %}
+  <div class="panel panel__container">
     <h5>{{ site.data.globals.panels.guides }}</h5>
     {{ guide_links }}
-</div>
+  </div>
 {% endif %}
